<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="softfruit.solutions.quickdoc.PhoneAuthActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    <TextView
        android:layout_gravity="center"
        android:padding="8dp"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_91"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/xxx_xxx_xxxx"
            android:inputType="phone"
            android:cursorVisible="false"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/sendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:maxLength="10"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/colorText" />


</LinearLayout>
