<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="softfruit.solutions.carehack.activity.authentication.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:text="@string/enter_details"
            android:textAllCaps="true" />

        <FrameLayout
            android:id="@+id/pick_a_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@color/colorPrimary"
                app:border_color="@color/colorPrimary"
                app:border_width="3dp" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tint="@color/colorBackground"
                app:srcCompat="@drawable/ic_add_a_photo" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_your_gender"
                android:textColor="@color/colorTextGrey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginRight="8dp"
                    android:tint="@color/colorIconInactive"
                    app:srcCompat="@drawable/ic_gende_male" />

                <ImageView
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginLeft="8dp"
                    android:tint="@color/colorIconInactive"
                    app:srcCompat="@drawable/ic_gender_female" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="42dp"
                android:theme="@style/TextLabelDark"
                app:errorTextAppearance="@style/error_appearance_accent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fullnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/darker_gray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="42dp"
                android:theme="@style/TextLabelDark"
                app:errorTextAppearance="@style/error_appearance_accent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@android:color/darker_gray" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="42dp"
                android:theme="@style/TextLabelDark"
                app:errorTextAppearance="@style/error_appearance_accent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/placeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place"
                    android:inputType="text"
                    android:textColor="@android:color/darker_gray" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_shape"
            android:text="@string/finish_"
            android:textAllCaps="false"
            android:textColor="@color/colorText" />

    </LinearLayout>


</ScrollView>
